Add bounce as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "svg-mask"]
 	path = svg-mask
 	url = git://gist.github.com/2420298.git
+[submodule "bounce"]
+	path = bounce
+	url = git://gist.github.com/2424184.git
