Update location of bounce

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://gist.github.com/2420298.git
 [submodule "bounce"]
 	path = bounce
-	url = git://gist.github.com/2424184.git
+	url = https://gist.github.com/2424184.git
 [submodule "led-scroller"]
 	path = led-scroller
 	url = git://gist.github.com/1192523.git
