update submodule urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "svg-mask"]
 	path = svg-mask
-	url = git://gist.github.com/2420298.git
+	url = https://gist.github.com/2420298.git
 [submodule "bounce"]
 	path = bounce
 	url = https://gist.github.com/2424184.git
 [submodule "led-scroller"]
 	path = led-scroller
-	url = git://gist.github.com/1192523.git
+	url = https://gist.github.com/1192523.git
